<resources>
    <string name="app_name">Lab3</string>
    <string name="graph_expression">y = x * cos(x/2)</string>
    <string name="any_decimal_value">Любое десятичное значение</string>
    <string name="left_x_bound">От Х: </string>
    <string name="right_x_bound">До X:</string>
    <string name="upper_y_bound">От Y: </string>
    <string name="lower_y_bound">До Y: </string>
    <string name="build_plot_text">Построить</string>
    <string name="err_empty_value">Значение не может быть пустым!</string>
    <string name="err_x_bound_issue">От X должно быть меньше До X</string>
    <string name="err_y_bound_issue">От Y должно быть меньше До Y</string>
</resources>