<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_expression"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"/>

    <me.hexu.lab3.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="420dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/left_x_bound"
                android:layout_marginStart="4dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/left_x_graph_bound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_decimal_value"
                android:importantForAutofill="no"
                android:inputType="numberSigned"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/right_x_bound"
                android:layout_marginStart="4dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/right_x_graph_bound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_decimal_value"
                android:importantForAutofill="no"
                android:inputType="numberSigned"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upper_y_bound"
                android:layout_marginStart="4dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/upper_y_graph_bound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_decimal_value"
                android:importantForAutofill="no"
                android:inputType="numberSigned"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lower_y_bound"
                android:layout_marginStart="4dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/lower_y_graph_bound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_decimal_value"
                android:importantForAutofill="no"
                android:inputType="numberSigned"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/build_plot"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/build_plot_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="8dp"/>

</LinearLayout>